# ChangeLog for net-libs/libnet
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libnet/ChangeLog,v 1.68 2010/11/13 08:40:15 grobian Exp $

  13 Nov 2010; Fabian Groffen <grobian@gentoo.org> libnet-1.1.5.ebuild,
  +files/libnet-1.1.5-darwin.patch:
  Fix compilation on Darwin

  10 Nov 2010; Jeroen Roovers <jer@gentoo.org> libnet-1.1.5.ebuild:
  Forgot one.

  10 Nov 2010; Jeroen Roovers <jer@gentoo.org> libnet-1.0.2a-r3.ebuild,
  libnet-1.1.4-r1.ebuild:
  Revert.

  10 Nov 2010; Sebastian Pipping <sping@gentoo.org> libnet-1.0.2a-r3.ebuild,
  libnet-1.1.4-r1.ebuild, libnet-1.1.5.ebuild:
  Fix SRC_URI and HOMEPAGE

*libnet-1.1.5 (09 Nov 2010)

  09 Nov 2010; Jeroen Roovers <jer@gentoo.org> +libnet-1.1.5.ebuild:
  Version bump.

  19 Jul 2010; Markus Meier <maekke@gentoo.org> libnet-1.0.2a-r3.ebuild:
  add ~arm, bug #301080

  26 Jan 2010; Jeroen Roovers <jer@gentoo.org> libnet-1.0.2a-r3.ebuild,
  -libnet-1.1.2.1-r1.ebuild, -libnet-1.1.2.1-r2.ebuild,
  -files/libnet-1.1.2.1-autotools.patch,
  -files/libnet-1.1.2.1-cq_end_loop.patch,
  -files/libnet-1.1.2.1-fix-chksum.patch, -libnet-1.1.4.ebuild:
  Remove old. 1.0.2a-r3 stable for HPPA too.

  26 Jan 2010; Brent Baude <ranger@gentoo.org> libnet-1.1.4-r1.ebuild:
  Marking libnet-1.1.4-r1 ppc64 for bug 289857

  25 Jan 2010; Raúl Porcel <armin76@gentoo.org> libnet-1.1.4.ebuild,
  libnet-1.1.4-r1.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #289857

  16 Jan 2010; Tiago Cunha <tcunha@gentoo.org> libnet-1.1.4-r1.ebuild:
  stable sparc, bug 289857

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  libnet-1.1.4-r1.ebuild:
  Transfer Prefix keywords

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  libnet-1.1.4-r1.ebuild:
  stable x86, bug 289857

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org>
  libnet-1.1.4-r1.ebuild:
  Stable on alpha, bug #289857

  24 Dec 2009; Pacho Ramos <pacho@gentoo.org> libnet-1.1.4-r1.ebuild: